--- a/article3.html
+++ b/article3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт</title>
+    <title>Взгляды на кибербезопасность</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +11,16 @@
 
 
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="касперский, сайт о касперском, кибербезопасность, купить касперский, купить, антивирус">
+    <meta name="description" content="сайт о Евгении Василиевиче Касперском, о его юности, семье и конечно же карьере">
+    <link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <meta property="og:title" content="Взгляды на кибербезопасность">
+    <meta property="og:site_name" content="Сайт о Касперском">
+    <meta property="og:url" content="https://lixx231.github.io/Kaspersky/article3.html">
+    <meta property="og:description" content="Главная страница">
+    <meta property="og:image" content="https://lixx231.github.io/Kaspersky/img/images.jpg">
 </head>
 <body>
    <header>
@@ -26,7 +36,7 @@
    </header>
    <main>
     <section class="content">
-        <h2>Взгляды на кибербезолпасность</h2>
+        <h2>Взгляды на кибербезопасность</h2>
         <img class="avatar" src="img/images.jpg" alt="Касперский">
         <p><strong>Евгений Касперский в течение нескольких лет открыто высказывает опасения по поводу угрозы кибератаки на критически важные объекты инфраструктуры, которая может привести к катастрофическим последствиям. Он поддерживает идею соглашения о нераспространении кибероружия, считая, что мировое сообщество должно положить конец гонке кибервооружений.
 
