--- a/definitions.html
+++ b/definitions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт</title>
+    <title>Определения</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +11,16 @@
 
 
     <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="касперский, сайт о касперском, кибербезопасность, купить касперский, купить, антивирус">
+    <meta name="description" content="сайт о Евгении Василиевиче Касперском, о его юности, семье и конечно же карьере">
+    <link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <meta property="og:title" content="Определения">
+    <meta property="og:site_name" content="Сайт о Касперском">
+    <meta property="og:url" content="https://lixx231.github.io/Kaspersky/definitions.html">
+    <meta property="og:description" content="Главная страница">
+    <meta property="og:image" content="https://lixx231.github.io/Kaspersky/img/bank.svg">
 </head>
 <body>
    <header>
