--- a/definitions.html
+++ b/definitions.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Определения">
     <meta property="og:site_name" content="Сайт о Касперском">
     <meta property="og:url" content="https://lixx231.github.io/Kaspersky/definitions.html">
-    <meta property="og:description" content="Главная страница">
+    <meta property="og:description" content="Сайт о Евгении Василиевиче Касперском, о его юности, семье и конечно же карьере">
     <meta property="og:image" content="https://lixx231.github.io/Kaspersky/img/bank.svg">
 </head>
 <body>
