--- a/article3.html
+++ b/article3.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Взгляды на кибербезопасность">
     <meta property="og:site_name" content="Сайт о Касперском">
     <meta property="og:url" content="https://lixx231.github.io/Kaspersky/article3.html">
-    <meta property="og:description" content="Главная страница">
+    <meta property="og:description" content="Сайт о Евгении Василиевиче Касперском, о его юности, семье и конечно же карьере">
     <meta property="og:image" content="https://lixx231.github.io/Kaspersky/img/images.jpg">
 </head>
 <body>
