--- a/article4.html
+++ b/article4.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Семья и увлечения">
     <meta property="og:site_name" content="Сайт о Касперском">
     <meta property="og:url" content="https://lixx231.github.io/Kaspersky/article4.html">
-    <meta property="og:description" content="Главная страница">
+    <meta property="og:description" content="Сайт о Евгении Василиевиче Касперском, о его юности, семье и конечно же карьере">
     <meta property="og:image" content="https://lixx231.github.io/Kaspersky/img/bank.svg">
 </head>
 <body>
