--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         </div>
         <label for="E-mail">enter your E-mail</label><br>
         <div class="form_item">
-            <input type="mail" id="E-mail" required placeholder="E-mail"><br>
+            <input type="email" id="E-mail" required placeholder="E-mail"><br>
         </div>
         <div class="form_item">
             <label for="review">
                 Review:<br>
-                <textarea name="Review" rows="10" id="Review"></textarea>
+                <textarea name="review" rows="10" id="Review"></textarea>
             </label>
         </div>
         <div class="form_item">
